# SpeakEasy

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Doxyfile.in  NEWS  README  config.h.cmake
.github/workflows/: actions.yml
cmake_modules/: FindEigen2.cmake  FindGLEW.cmake  FindGLFW.cmake  FindPantheios.cmake  FindSFML.cmake  FindStlsoft.cmake
data/md5/: humanoid.md5anim  humanoid.md5mesh  humanoidstand.md5anim  humanoidwalk.md5anim
src/: .clang-format  CMakeLists.txt  SE_CClock.cpp  SE_CClock.h  SE_CGUIGLFW.cpp  SE_CGUIGLFW.h  SE_CGUIInterface.cpp  SE_CGUIInterface.h  SE_CGUIManager.cpp  SE_CGUIManager.h  SE_CGUISFML.cpp  SE_CGUISFML.h  SE_CInputManager.cpp  SE_CInputManager.h  SE_CLogManager.cpp  SE_CLogManager.h  SE_CMemoryManager.cpp  SE_CMemoryManager.h  SE_CRenderManager.cpp  SE_CRenderManager.h  SE_CStackAllocator.cpp  SE_CStackAllocator.h  SE_ConsoleColors.h  SE_GLEW_Include.h  SE_GLFW3_Include.h  SE_Generator.cpp  SE_Generator.h  SE_Ground.cpp  SE_Ground.h  SE_IBaseManager.cpp  SE_IBaseManager.h  SE_Screen.cpp  SE_Screen.h  SE_Types.h  config.h.cmake  main.cpp  misc.cpp  misc.h  uSE_AnimJoint.cpp  uSE_AnimJoint.h  (+26 more)
src/shaders/: CMakeLists.txt  glsl_templ.h.in  gs_simple.glsl  ps_simple.glsl  shader_to_header.cmake  simple_fs.glsl  simple_ps.glsl  simple_vs.glsl  vs_simple.glsl
tests/: 01_sizeTypes.cpp  CMakeLists.txt
tests/gtest/: CMakeLists.txt
