INCLUDE_DIRECTORIES(${SpeakEasy_SOURCE_DIR}/src)

ADD_SUBDIRECTORY(gtest)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE(01_sizeTypes 01_sizeTypes.cpp)

TARGET_LINK_LIBRARIES(01_sizeTypes ${GTEST_BOTH_LIBRARIES})
ADD_DEPENDENCIES(01_sizeTypes googletest)

ADD_TEST(01_sizeTypes 01_sizeTypes)
